samples/_failures_safe/1761167902_624895_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95639dd9.c: In function ‘main’:
./samples/SAFE/__tmp_95639dd9.c:163:9: error: expected declaration or statement at end of input
  163 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_95639dd9.c:163:9: error: expected declaration or statement at end of input
